# StratumCode

./: .gitignore  main.py  pyproject.toml
.codegraph/: daemon.pid
doc/: chat-state-machine.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: FileMentionDropdown.vue  FilePreviewPopover.vue  FileReference.vue  HomePage.vue  ShuffleText.vue  Sidebar.vue
frontend/src/composables/: useChatStream.js  useChatTimeline.js  useLsp.js  useMcp.js  useSessions.js  useSkills.js  useWorkspaces.js
stratumcode/: agent_runtime.py  app_settings.py  chat.py  checkpoint.py  clearify_runtime.py  db.py  design_planner.py  hypothesis_verifier.py  implementation_runner.py  investigator.py  json2slots.py  main.py  model_settings.py  patch_authorization.py  patch_engine.py  patch_planner.py  prompt.py  providers.py  server.py  sessions.py  skills.py  snapshot_store.py  subagent_catalog.py  subagents.py  tools.py  workspaces.py
stratumcode/agent/: __init__.py  evidence.py  policy.py  tools.py
stratumcode/lsp/: __init__.py
stratumcode/mcp/: __init__.py
stratumcode/plugin/: __init__.py
stratumcode/status/: __init__.py  analyzing.py  clearify.py  designing.py  implementing.py  initializing.py  investigating.py  patch_planning.py  preparing_investigation.py  saving_session.py  session_memory.py  task_analysis.py  task_contract.py  task_updates.py  user_context.py  validating.py  waiting_for_user.py
stratumcode/tools/: __init__.py  registry.py  spec.py
tests/: test_chat.py  test_tools.py
(+55 files in other folders)
