[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratumcode"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pywebview>=6.2.1",
    "pyyaml>=6.0",
]

[project.scripts]
stratumcode = "stratumcode.main:main"
stratumcode-dev = "stratumcode.main:main_dev"
